# Dual-ESP32-Telemetry

./: README.md
gateway-node/: Cargo.toml
gateway-node/src/: main.rs
gateway-node/src/can/: receive.rs
sensor-node/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
sensor-node/.cargo/: config.toml
sensor-node/src/: lib.rs
sensor-node/src/common_protocol/: can_transfer.rs
sensor-node/src/mpu6050_lib/: lib.rs  mpu.rs
sensor-node/tests/: hello_test.rs
