[package]
edition = "2021"
name    = "sensor_node"
version = "0.1.0"

[[bin]]
name = "sensor_node"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["esp32c3", "unstable", "defmt"] }
esp-backtrace = { version = "0.16.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
critical-section = "1.2.0"
heapless = "0.8.0"
embedded-graphics = "0.8.1"
libm = "0.2"
micromath = {version = "2.1.0",default-features = false, features = ["vector"]}
embedded-hal = "1.0.0"
embassy-time = {version = "0.4.0", features = ["defmt"]}
embassy-executor = { version = "0.7.0", features = ["arch-riscv32", "defmt"] }
esp-hal-embassy =  { version = "0.8.0", features = ["esp32c3"] }
embassy-sync = "0.7.0"
nb = "1.1.0"
crc = "3.3.0"
defmt = "1.0.1" 
esp-println = { version = "0.14.0", features = [
    "esp32c3",
    "log-04",
    "defmt-espflash",
] }
defmt-serial = "0.10.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
